# BI-cutelim

./: LICENSE  Makefile  README.md  _CoqProject  coq-bunched.opam
.github/workflows/: build.yml
docs/: index.html
docs/93aa954/: bunched.algebra.bi.html  bunched.algebra.derived_laws.html  bunched.algebra.from_monoid.html  bunched.algebra.notation.html  bunched.bunch_decomp.html  bunched.cutelim_s4.html  bunched.interp.html  bunched.seqcalc_height.html  bunched.seqcalc_s4.html  bunched.syntax.html  indexpage.html  toc.html
docs/d26ff19/: bunched.algebra.bi.html  bunched.algebra.derived_laws.html  bunched.algebra.from_closure.html  bunched.algebra.from_monoid.html  bunched.algebra.interface.html  bunched.algebra.notation.html  bunched.analytic_completion.html  bunched.bunch_decomp.html  bunched.cutelim.html  bunched.cutelim_s4.html  bunched.interp.html  bunched.interp_s4.html  bunched.prelude.lists.html  bunched.prelude.sets.html  bunched.seqcalc.html  bunched.seqcalc_height.html  bunched.seqcalc_height_s4.html  bunched.seqcalc_s4.html  bunched.syntax.html  bunched.terms.html  indexpage.html  toc.html
extra/: header.html
gh-pages/93aa954/: bunched.algebra.from_closure.html  bunched.algebra.interface.html  bunched.terms.html
html/: bunched.cutelim.html  bunched.interp_s4.html  bunched.seqcalc.html  bunched.seqcalc_height_s4.html
iris-mod/bi/: bi.v  derived_connectives.v  derived_laws.v  interface.v
theories/: analytic_completion.v  bunch_decomp.v  bunch_equiv_lemma.v  bunches.v  cutelim.v  cutelim_s4.v  formula.v  interp.v  interp_s4.v  seqcalc.v  seqcalc_height.v  seqcalc_height_s4.v  seqcalc_s4.v  syntax.v  terms.v
theories/algebra/: bi.v  derived_laws.v  from_closure.v  from_monoid.v  interface.v  notation.v
theories/ext/: terms.v
theories/prelude/: lists.v  sets.v
theories/s4/: cutelim.v  formula.v  interp.v  seqcalc.v  seqcalc_height.v
