opam-version: "2.0"
name: "coq-bunched"
synopsis: "Semantic proof of cut elimination for the logic of bunched implications"
version: "dev"
maintainer: "Dan Frumin <dan@groupoid.moe>"
authors: "Dan Frumin"
license: "BSD-3-Clause"
homepage: "http://github.com/co-dan/BI-cutelim"
bug-reports: "http://github.com/co-dan/BI-cutelim/issue"
dev-repo: "git+http://github.com/co-dan/BI-cutelim.git"
build: [make "-j%{jobs}%"]
install: [make "install"]
remove: ["rm" "-rf" "%{lib}%/coq/user-contrib/bunched"]
depends: [
  "coq-stdpp" { (>= "1.8.0") | (= "dev") }
  "coq" { (>= "8.16") | (= "dev") }
]
